--- a/proposals/mips/mip-x18/x18.md
+++ b/proposals/mips/mip-x18/x18.md
@@ -33,7 +33,7 @@ A proposal to adjust the following risk parameters:
 | VELO Collateral Factor | 65%           | 63%               |
 | VELO Supply Cap        | 42,000,000    | 68,000,000        |
 
-\*_Cap Recommendations will be implemented via Guardian_
+<sub> \*Cap Recommendations will be implemented via Guardian </sub>
 
 ### IR Parameters
 
@@ -78,7 +78,7 @@ A proposal to adjust the following risk parameters:
 | WBTC.wh Collateral Factor | 11%           | 9%                |
 | WETH.wh Collateral Factor | 28%           | 27%               |
 
-\*_Cap Recommendations will be implemented via Guardian_
+<sub> \*Cap Recommendations will be implemented via Guardian </sub>
 
 Our recommendation post is located in the forums, please refer to this
 [link](https://forum.moonwell.fi/t/gauntlet-base-optimism-moonbeam-moonriver-monthly-recommendations-2025-03-18/1665).
