--- a/proposals/mips/mip-x18/x18.md
+++ b/proposals/mips/mip-x18/x18.md
@@ -9,7 +9,7 @@ A proposal to adjust the following risk parameters:
 | WETH Reserve Factor | 5%            | 10%               |
 | weETH Supply Cap    | 2,800         | 4,000             |
 
-\*_Cap Recommendations will be implemented via Guardian_
+<sub> \*Cap Recommendations will be implemented via Guardian </sub>
 
 ### IR Parameters
 
